--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./css/main.css" />
   </head>
   <body>
+    <p>для перемешения нажми стрелку вправо</p>
     <div class="d">
       <canvas id="game" width="960" height="540"></canvas>
       <div class="backdrop" data-backdrop>
